<resources>
    <string name="app_name">BuyMe</string>
    <!-- Main -->
    <string name="main_activity_logging_in">Logging in... Please wait.</string>
    <!-- Map -->
    <string name="title_activity_maps">Map</string>
    <!-- Request Form -->
    <string name="coordinates_label_name">Address</string>
    <string name="time_label_name">Deadline</string>
    <string name="title_label_name">Title</string>
    <string name="description_label_name">Description</string>
    <string name="tags_label_name">Tag</string>
    <string name="new_request_success">Added new request!</string>
    <string name="new_request_failure">Adding new request failed!</string>

    <string name="title_hint">New request</string>
    <string name="description_hint">What\'s the problem?</string>
    <!-- Dialog -->
    <string name="error_title">Error</string>
    <string name="info_title">Info</string>
    <string name="question_title">Question</string>
    <!-- Network -->
    <string name="no_network_connection">There\'s no network connection.</string>
    <!-- User -->
    <string name="authorize_user_error">Unable to authorize user.</string>
    <string name="deactivated_user">Your account is deactivated.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_name_label">Name:</string>
    <string name="user_email_label">E-mail address:</string>
    <string name="user_phone_label">Phone number:</string>
    <string name="user_reputation_label">Reputation:</string>

    <string name="user_avatar_text">User avatar</string>
    <string name="delete_user_invalid_password">Invalid password. Your account cannot be deleted.</string>
    <string name="delete_user_text">Delete account</string>
    <string name="delete_user_question">Are you sure to delete account? If yes, enter password.</string>
    <string name="delete_user_success">Your account has been deleted.</string>
    <string name="delete_user_failure">Oops…Your account has not been deleted.</string>
    <string name="delete_user_accepted_requests">Your account cannot be deleted due to your accepted requests.</string>

    <string name="single_request_desc_label">Description</string>
    <string name="single_request_address_label">Address</string>
    <string name="single_request_deadline_label">Deadline</string>

    <!-- Basic -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="default_notification_channel_id">default_channel</string>

</resources>
