<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RequestFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/coordinatesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="1dp"
            android:text="@string/coordinates_label_name"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="1dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="1dp"
            android:text="@string/time_label_name"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:inputType="date"
            android:padding="1dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tagsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="1dp"
            android:text="@string/tags_label_name"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:inputType="textLongMessage"
            android:padding="1dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/requestLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="1dp"
            android:text="@string/request_label_name"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/request"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:padding="1dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:singleLine="false"
            android:textSize="20sp"
            android:gravity="top"
            android:inputType="textMultiLine"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>