<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/request_form_summary_coords_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#D2D2D2"
            android:padding="5dp"
            android:text="@string/coordinates_label_name"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/request_form_summary_coords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="1dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textAlignment="viewStart"
            android:textColor="#050505"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/request_form_summary_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#D2D2D2"
            android:padding="5dp"
            android:text="@string/time_label_name"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/request_form_summary_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="1dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textAlignment="viewStart"
            android:textColor="#050505"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/request_form_summary_tags_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#D2D2D2"
            android:padding="5dp"
            android:text="@string/tags_label_name"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/request_form_summary_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="1dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textAlignment="viewStart"
            android:textColor="#050505"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/request_form_summary_desc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#D2D2D2"
            android:padding="5dp"
            android:text="@string/request_label_name"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/request_form_summary_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:padding="1dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:singleLine="false"
            android:textColor="#050505"
            android:textSize="20sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/request_search_inputs_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/request_form_summary_next_button"
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp"
            android:clickable="true"
            android:elevation="5dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_send" />

    </FrameLayout>

</FrameLayout>
